# Chromasound-Studio

./: CMakeLists.txt  Chromasound_Studio.cpp  Chromasound_Studio.h  FM_PSG_Studio.cpp  FM_PSG_Studio.h  application.cpp  application.h  bson.cpp  bson.h  channelswidget.cpp  channelswidget.h  channelwidget.cpp  channelwidget.h  channelwidget.ui  fm-psg-studio.pro  gd3.cpp  gd3.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prdisplaywidget.h  resources.qrc  seekwidget.cpp  stepcursorwidget.cpp  stepcursorwidget.h  stepsequencerwidget.cpp  stepsequencerwidget.h  timedisplaywidget.h  topwidget.cpp  topwidget.ui
browser/: filesystemmodel.h  sortfilterproxymodel.cpp
channelswidget/: channelswidget.cpp  channelswidget.h  channelswidget.ui  channelwidget.cpp  channelwidget.h  channelwidget.ui  led.cpp  led.h  prdisplaywidget.cpp  prdisplaywidget.h  rectled.cpp  rectled.h  stepcursorwidget.cpp  stepcursorwidget.h  stepkeys.cpp  stepkeys.h  stepkeyswidget.h  stepsequencerwidget.cpp  stepsequencerwidget.h  stepvelocities.cpp  stepvelocities.h  stepvelocitieswidget.h
chromasound/: chromasound.h  chromasound_direct.cpp  chromasound_direct.h  chromasound_dual.cpp  chromasound_dual.h  chromasound_emu.cpp  chromasound_emu.h  chromasound_proxy.cpp  chromasound_proxy.h  chromasound_standin.cpp  chromasound_standin.h  vgmplayer.cpp  vgmplayer.h
commands/: addchannelcommand.cpp  addchannelcommand.h  addnotecommand.cpp  addnotecommand.h  addpitchchangecommand.cpp  addpitchchangecommand.h  addplaylistenvelopefrequencychangecommand.cpp  addplaylistenvelopefrequencychangecommand.h  addplaylistenvelopeshapechangecommand.cpp  addplaylistenvelopeshapechangecommand.h  addplaylistitemcommand.cpp  addplaylistitemcommand.h  addplaylistitemscommand.cpp  addplaylistitemscommand.h  addplaylistlfochangecommand.cpp  addplaylistlfochangecommand.h  addplaylistnoisefrequencychangecommand.cpp  addplaylistnoisefrequencychangecommand.h  addplaylistusertonechangecommand.cpp  addplaylistusertonechangecommand.h  addtrackitemscommand.cpp  addtrackitemscommand.h  addtracksettingschangecommand.cpp  addtracksettingschangecommand.h  deletechannelcommand.cpp  deletechannelcommand.h  deletepatterncommand.cpp  deletepatterncommand.h  duplicatepatterncommand.cpp  duplicatepatterncommand.h  editalgorithmsettingscommand.cpp  editalgorithmsettingscommand.h  editchannelvolumecommand.cpp  editchannelvolumecommand.h  editfm2operatorsettingscommand.cpp  editfm2operatorsettingscommand.h  editfm2settingscommand.cpp  editfm2settingscommand.h  editfm4operatorsettingscommand.cpp  editfm4operatorsettingscommand.h  (+112 more)
common/: pianowidget.cpp  pianowidget.h  recordiconengine.cpp  recordiconengine.h
fm-psg/: fm-psg.h  fm-psg_dummy.cpp  fm-psg_dummy.h  fm-psg_impl.cpp  fm-psg_impl.h  fm-psg_soft.cpp  fm-psg_soft.h  vgmplayer.cpp  vgmplayer.h
fmimport/: fmimportdialog.cpp  fmimportdialog.h  fmimportdialog.ui  oplimportdialog.cpp  oplimportdialog.h  oplimportdialog.ui  opnimportdialog.cpp  opnimportdialog.h  opnimportdialog.ui  patchtablemodel.cpp  patchtablemodel.h  tableview.h
fmwidget/: algorithmdisplaywidget.cpp  algorithmdisplaywidget.h  algorithmgraph.cpp  algorithmgraph.h  algorithmwidget.cpp  algorithmwidget.h  algorithmwidget.ui  envelopedisplaywidget.cpp  envelopedisplaywidget.h  fm4envelopedisplaywidget.cpp  fm4envelopedisplaywidget.h  fm4operatorwidget.cpp  fm4operatorwidget.h  fm4operatorwidget.ui  fm4widget.cpp  fm4widget.h  fm4widget.ui  fmlfowidget.h  fmwidget.cpp  fmwidget.h  fmwidget.ui  fmwidgetwindow.cpp  fmwidgetwindow.h  fmwidgetwindow.ui  operatorwidget.cpp  operatorwidget.h  operatorwidget.ui  pianowidget.cpp  pianowidget.h
formats/: bson.cpp  bson.h  rom.cpp  rom.h
ganttwidget/: ganttbottomwidget.cpp  ganttbottomwidget.h  gantteditorwidget.cpp  gantteditorwidget.h  ganttheaderwidget.cpp  ganttheaderwidget.h  ganttitem.cpp  ganttitem.h  ganttleftwidget.cpp  ganttleftwidget.h  ganttmarker.cpp  ganttmarker.h  ganttscalewidget.cpp  ganttscalewidget.h  ganttwidget.cpp  ganttwidget.h  ganttwidget.ui  scrollablewidget.cpp  scrollablewidget.h
globals/: fmglobalswidget.cpp  fmglobalswidget.h  fmglobalswidget.ui  melodyglobalswidget.cpp  melodyglobalswidget.h  melodyglobalswidget.ui  melodypatchsetwidget.cpp  melodypatchsetwidget.h  melodypatchsetwidget.ui  opll.cpp  opll.h  pcmglobalswidget.cpp  pcmglobalswidget.h  pcmglobalswidget.ui  pcmglobalswindow.cpp  pcmglobalswindow.h  pcmglobalswindow.ui  romglobalswidget.cpp  romglobalswidget.h  romglobalswidget.ui  romglobalswindow.cpp  romglobalswindow.h  romglobalswindow.ui  romtablemodel.cpp  romtablemodel.h  ssgglobalswidget.cpp  ssgglobalswidget.h  ssgglobalswidget.ui  unselectablestringlistmodel.cpp  unselectablestringlistmodel.h
info/: projectinfodialog.h  projectinfodialog.ui
mdiarea/: mdiarea.cpp  mdiarea.h  mdisubwindow.cpp  mdisubwindow.h
midi/: midi.cpp  midi.h  midifile.cpp  midifile.h  midiinput.cpp  midiinput.h  midipoller.cpp  midipoller.h  util.cpp  util.h
noisewidget/: noisewidget.cpp  noisewidget.h  noisewidget.ui
opl/: melodywidget.cpp  melodywidget.h  melodywidget.ui  opll.cpp  opll.h  rhythmwidget.cpp  rhythmwidget.h  rhythmwidget.ui
opn/: algorithmwidget.cpp  algorithmwidget.ui  fmlfowidget.cpp  fmlfowidget.ui  lfowidget.h  lfowidget.ui  opnenvelopedisplaywidget.cpp  opnenvelopedisplaywidget.h  opnoperatorwidget.cpp  opnoperatorwidget.h  opnoperatorwidget.ui  opnwidget.cpp  opnwidget.h  opnwidget.ui  opnwidgetwindow.cpp  opnwidgetwindow.h  opnwidgetwindow.ui  pcmwidget.cpp  pcmwidget.h  pcmwidget.ui
pcm/: pcmwidget.cpp  pcmwidget.h  pcmwidget.ui  pcmwidgettablemodel.cpp  pcmwidgettablemodel.h  pcmwidgetwindow.cpp  pcmwidgetwindow.h  pcmwidgetwindow.ui
pcmusage/: pcmusagedialog.cpp  pcmusagedialog.h  pcmusagedialog.ui  pcmusagedisplayitem.cpp  pcmusagedisplayitem.h  pcmusagedisplaywidget.cpp  pcmusagedisplaywidget.h  pcmusagelegendwidget.cpp  pcmusagelegendwidget.h
pcmwidget/: pcmwidget.cpp  pcmwidget.h
pianorollwidget/: pianorollkeyswidget.cpp  pianorollkeyswidget.h  pianorollvelocitieswidget.cpp  pianorollvelocitieswidget.h  (+7 more)
(+378 files in other folders)
